--- a/vault.html
+++ b/vault.html
@@ -84,7 +84,7 @@
 <section id="intro">
   <div class="fadeIn animated intro-content">
     <h1>
-      Купить и продать биткойны
+      Хранение биткойнов
     </h1>
     <p>
       Самый простой и безопасный способ.<br>
