--- a/blockchain-bitcoin-consulting.html
+++ b/blockchain-bitcoin-consulting.html
@@ -84,11 +84,11 @@
 <section id="intro">
   <div class="fadeIn animated intro-content">
     <h1>
-      Купить и продать биткойны
+      Консалтинг
     </h1>
     <p>
-      Самый простой и безопасный способ.<br>
-      Решите вопрос в течение нескольких минут.
+      Блокчейн: децентрализованный мир<br>
+      Смарт-контракты, криптовалюты, ДАО.
     </p>
     <p>
       <form class="new_account" id="new_account" action="/accounts" accept-charset="UTF-8" data-remote="true" method="post"><input name="utf8" type="hidden" value="&#x2713;" />
