--- a/vault.html
+++ b/vault.html
@@ -87,8 +87,8 @@
       Хранение биткойнов
     </h1>
     <p>
-      Самый простой и безопасный способ.<br>
-      Решите вопрос в течение нескольких минут.
+      Всё ради защиты ваших активов.<br>
+      Купите себе спокойную жизнь.
     </p>
     <p>
       <form class="new_account" id="new_account" action="/accounts" accept-charset="UTF-8" data-remote="true" method="post"><input name="utf8" type="hidden" value="&#x2713;" />
