--- a/blockchain-bitcoin-consulting.html
+++ b/blockchain-bitcoin-consulting.html
@@ -87,7 +87,7 @@
       Консалтинг
     </h1>
     <p>
-      Блокчейн: децентрализованный мир<br>
+      Блокчейн: децентрализованный мир.<br>
       Смарт-контракты, криптовалюты, ДАО.
     </p>
     <p>
