--- a/blockchain-bitcoin-consulting.html
+++ b/blockchain-bitcoin-consulting.html
@@ -88,7 +88,7 @@
     </h1>
     <p>
       Блокчейн: децентрализованный мир.<br>
-      Смарт-контракты, криптовалюты, ДАО.
+      Вся база знаний и экспертиза к Вашим услугам.
     </p>
     <p>
       <form class="new_account" id="new_account" action="/accounts" accept-charset="UTF-8" data-remote="true" method="post"><input name="utf8" type="hidden" value="&#x2713;" />
@@ -121,7 +121,7 @@
 
 <section id="features" class="container">
   <div class="span6">
-    <h2>Полная безопасность.</h2>
+    <h2>Смарт-контракты, криптовалюты, ДАО.</h2>
     <p>Важно не только приобрести, но и правильно хранить ваше богатство.</p>
 
     <h5>Главные особенности</h5>
