--- a/blockchain-bitcoin-consulting.html
+++ b/blockchain-bitcoin-consulting.html
@@ -88,7 +88,7 @@
     </h1>
     <p>
       Блокчейн: децентрализованный мир.<br>
-      Вся база знаний и экспертиза к Вашим услугам.
+      Вся полнота информации для верных решений.
     </p>
     <p>
       <form class="new_account" id="new_account" action="/accounts" accept-charset="UTF-8" data-remote="true" method="post"><input name="utf8" type="hidden" value="&#x2713;" />
