--- a/blockchain-bitcoin-consulting.html
+++ b/blockchain-bitcoin-consulting.html
@@ -237,7 +237,7 @@
         <h4>Мониторинг</h4>
         <nav>
 <a href="https://cryptowat.ch/btc-china/btccny/5min">BTC China</a>
-<a href="https://cryptowat.ch/btce/ltcbtc/5min">LTC/BTC</a>
+<a href="https://cryptowat.ch/btce/ltcbtc/4hr">LTC/BTC</a>
 <a href="https://whaleclub.co">WhaleClub</a>
 <a href="https://www.blockonomics.co">Blockonomics</a>
         </nav>
