--- a/blockchain-bitcoin-consulting.html
+++ b/blockchain-bitcoin-consulting.html
@@ -236,6 +236,7 @@
       <div class="span2">
         <h4>Мониторинг</h4>
         <nav>
+<a href="http://BitcoinAcademy.RU">BitcoinAcademy.RU</a>
 <a href="https://cryptowat.ch/btc-china/btccny/5min">BTC China</a>
 <a href="https://cryptowat.ch/btce/ltcbtc/4hr">LTC/BTC</a>
 <a href="https://whaleclub.co">WhaleClub</a>
