--- a/buy-sell-bitcoin.html
+++ b/buy-sell-bitcoin.html
@@ -116,6 +116,11 @@
       Консалтинг
       </a>
     </li>
+    <li>
+      <a href="http://BitcoinAcademy.RU">
+      Биткойн Академия
+      </a>
+    </li>
   </ul>
 </div>
 
