Rename Litecoin Association to Litecoin Project

--- a/lite.html
+++ b/lite.html
@@ -31,7 +31,7 @@
 		</script>
 		<div style="text-align:center">
 			Reward-Drop ETA date: <strong>08-25-2015 17:56:59</strong><br/><br/>
-			<p>Litecoin's block mining reward halves every 840,000 blocks, the coin reward will decrease from 50 to 25 coins. You can watch an educational video by the <a href="http://litecoinassociation.org/">Litecoin Association</a> explaining it in more detail below:</p>
+			<p>Litecoin's block mining reward halves every 840,000 blocks, the coin reward will decrease from 50 to 25 coins. You can watch an educational video by the <a href="https://litecoin.org/">Litecoin Project</a> explaining it in more detail below:</p>
 			<iframe width="560" height="315" align="center" src="https://www.youtube.com/embed/BPxq8CgMooI" frameborder="0" allowfullscreen></iframe>
 			<br/><br/>
 		</div>
